<resources>
    <string name="app_name">Clinical Diagnosis System</string>
    <string name="login_here">DONT HAVE AN ACCOUNT? REGISTER</string>
    <string name="register">Account Registration</string>
    <string name="login_here2">ALREADY HAVE AN ACCOUNT? LOGIN</string>
    <string name="attempt">Attempts remaining: </string>
    <string name="third_page">Check your health</string>
    <string name="pass_word">Enter Password</string>
    <string name="email_note">Enter Email</string>
    <string name="login_text">LOGIN</string>
    <string name="p_forgot">Forgot Password?</string>
    <string name="d_text">Diagnose Your Health</string>
    <string name="password">Reset Your Password</string>
    <string name="p_text">Select Diagnosing Date</string>
    <string name="reset_p">Reset</string>
    <string name="stat_one">Continuous coughing</string>
    <string name="stat_two">Breathing difficulties</string>
    <string name="stat_three">Sore throat</string>
    <string name="stat_four">Vomiting</string>
    <string name="stat_five">Nosebleed</string>
    <string name="stat_six">Abdominal pain</string>
    <string name="stat_seven">Dizziness</string>
    <string name="stat_eight">Congestion</string>
    <string name="stat_nine">Headache</string>
    <string name="stat_ten">Irregular periods</string>
    <string name="patient_temp">Enter date</string>
    <string name="s_text">Symptoms (Physical and Internal)</string>
    <string name="diagnose">Health Diagnose</string>
    <string name="di_text">Diagnose</string>
    <string name="result_text">DIAGNOSIS REPORT</string>
    <string name="health_text">Patient Health Status</string>
    <string name="symptom_text">Patient Symptom</string>
    <string name="treat_text">Treatment Needed</string>
    <string name="ds_text">Possible Disease Affected</string>
    <string name="logout1_text">Logout</string>
    <string name="e_text">Email</string>
    <string name="us_text">Username</string>
    <string name="us_password">Password</string>
    <string name="us_sex">Sex</string>
    <string name="reg_text">Register</string>
    <string name="temp_text">Enter your temperature</string>
    <string name="diag_t">BACK</string>
    <string name="login_back">BACK TO LOGIN</string>
    <string name="n_text">None</string>
    <string name="b_text">Breathing difficulties</string>
    <string name="so_text">Sore throat</string>
    <string name="v_text">Vomiting</string>
    <string name="no_text">Nosebleed</string>
    <string name="a_text">Abdominal pain</string>
    <string name="dii_text">Dizziness</string>
    <string name="lb_text">Low back pain</string>
    <string name="h_text">Headache</string>
    <string name="ip_text">Irregular periods</string>
    <string name="dig_text">DIAGNOSE</string>

</resources>