<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ResultActivity"
    android:background="@drawable/medical_3"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="111sp"
        android:text="@string/result_text"
        android:textAlignment="center"
        android:textColor="#3a6073"
        android:textSize="16.349sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="93dp"
        android:text="@string/health_text"
        android:textColor="#1D2B64"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/health_view"
        android:layout_width="292dp"
        android:layout_height="22dp"
        android:layout_marginTop="5.9dp"
        android:layout_marginEnd="18.8dp"
        android:layout_marginBottom="59dp"
        android:textAlignment="textStart"
        android:textColor="#ee0979"
        android:textSize="14sp"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:layout_marginTop="-43.678sp"
        android:text="@string/ds_text"
        android:textColor="#1D2B64"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/disease_view"
        android:layout_width="292dp"
        android:layout_height="95dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18.88dp"
        android:layout_marginBottom="60dp"
        android:textAlignment="textStart"
        android:textColor="#ee0979"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:id="@+id/re_dg"
        android:text="@string/diag_t"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button3"
        android:layout_marginTop="-39dp"
        android:onClick="onButtonClicked"/>

    <ImageView
        android:layout_width="190dp"
        android:layout_height="247dp"
        android:src="@drawable/moh" />





</LinearLayout>