<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    tools:context=".PasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:gravity="center"
        android:textSize="21sp"
        android:textColor="@android:color/darker_gray"/>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:gravity="start"
        android:layout_marginTop="19dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/emailpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="Email"
            android:textColorHint="@android:color/darker_gray"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:inputType="text"/>

        <Button

            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/bt_resetpass"
            android:text="@string/reset_p"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/back_loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="310dp"
            android:text="@string/login_back"
            android:textColor="#136a8a"
            android:layout_gravity="center"
            android:textStyle="bold" />



</LinearLayout>


</LinearLayout>